[tool.poetry]
name = "pygame-samples"
version = "0.1.0"
description = ""
authors = ["kkkyuito <172247568+kkkyuito@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
